# push-pull

./: .gitignore  .gitmodules  Procfile  Procfile.dev  README.md  app.json  mypy.ini  pyproject.toml  requirements.txt
alembic/: alembic.ini.dist  env.py
alembic/versions/: 1198b577bbd1_add_period_assignment.py  b6fd054b537f_initial_revision.py  d59037bd4ed3_make_approved_at_nullable.py
pushpull/: __init__.py  aeries.py  app.py  errors.py  filters.py  main.py  model.py  teacher_dash.py
pushpull/routes/: teacher_dash.py
pushpull/templates/: base.html  home.html  index.html  pull.html  redirect.html  teacher_dash.html  test_view.html
src/: index.html
