[tool.poetry]
name = "pushpull"
version = "0.1.0"
description = ""
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.1"
requests = "^2.31.0"
pytz = "^2023.3"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
sqlalchemy = { extras = ["mypy"], version = "^2.0.4" }
click = "^8.1.7"

[tool.poetry.dev-dependencies]
alembic = "^1.13.1"
mypy = "^1.8.0"
types-requests = "^2.31.0"
types-pytz = "^2023.3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
